--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -159,6 +159,11 @@ tbody tr th {
 
 }
 
+/* Left spacing for table elements */
+th, tr {
+	padding-left: 5px;
+}
+
 
 /* Fix Table Fonts to fit one row */
 .long-name {
@@ -269,12 +274,141 @@ border-radius: 10px;
 	text-align: center;
 }
 
+
+.contact-form-wrapper {
+	margin-top: 10px;
+	margin-bottom: 40px;
+	padding: 70px auto 70px auto;
+}
+
+.contact-form-wrapper h2 {
+	text-align: center;
+	color: #F5F5F5;
+}
+
+#cta {
+	padding: 1em;
+}
+
+
 /*.portfolio-item {
 	border-top: 1px solid gray;
 	border-bottom: 1px solid gray;
 }*/
 
 /* ===== END SKILLS TABLE ===== */
+
+
+/* CONTACT FORM */
+
+/* Center Contact Form */
+#contact-form {
+	 float: none;
+    margin: 0 auto;
+}
+
+
+/* #### Dark Matter #### */
+.dark-matter {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+    background-color: rgba(100, 110, 100, 0.1);
+    padding: 20px 30px 20px 30px;
+    font: inherit;
+    color: #D3D3D3;
+    text-shadow: 1px 1px 1px #444;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+}
+
+.dark-matter h1 {
+    padding: 0px 0px 10px 40px;
+    display: block;
+    border-bottom: 1px solid #444;
+    margin: -10px -30px 30px -30px;
+}
+
+.dark-matter h1>span {
+    font-size: 11px;
+}
+
+.dark-matter label {
+    display: block;
+    margin: 0px 0px 5px;
+}
+
+.dark-matter label>span {
+    float: left;
+    text-align: right;
+    padding-right: 10px;
+    margin-top: 10px;
+
+}
+
+.dark-matter input[type="text"], .dark-matter input[type="email"], .dark-matter textarea, .dark-matter select {
+    border: none;
+    color: #525252;
+    height: 25px;
+    line-height:15px;
+    margin-bottom: 16px;
+    margin-top: 2px;
+    outline: 0 none;
+    padding: 25px;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    background: #DFDFDF;
+    font-size: 1em;
+
+}
+
+.dark-matter select {
+    background: #DFDFDF url('down-arrow.png') no-repeat right;
+    background: #DFDFDF url('down-arrow.png') no-repeat right;
+    appearance:none;
+    -webkit-appearance:none; 
+    -moz-appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
+    width: 100%;
+    height: 35px;
+    color: #525252;
+    line-height: 25px;
+}
+
+.dark-matter textarea {
+    height:150px;
+    padding: 5px 0px 0px 5px;
+    font-size: 0.9em;
+    margin-bottom: 30px;
+
+}
+
+/* Center Button */
+.button-wrapper {
+	width: 100%;
+    text-align: center;	
+}
+
+/* Button Background color*/
+.dark-matter .button {
+	background-color: rgba(212, 198, 106, 1);
+}
+
+/* Button Background Color Hover */
+.dark-matter .button:hover {
+	background-color: transparent;
+    color: #F5F5F5;
+	border: 1px solid #F5F5F5;
+}
+
+
+/* ===== END CONTACT FORM ===== */
+
 
 @media (max-width: 750px) {
 
