Fixed banner image size

--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -31,7 +31,7 @@ body {
 
 #banner {
 	background: none;
-	background-image: url("../images/bg3-lg.png");
+	background-image: url("../images/bg3-lg.jpg");
 	background-repeat: no-repeat;
 	background-image: #f3f6fa;
 }
